feat(project): setup fragment with BaseFragment and setup Koin

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,24 +7,24 @@
 
     <fragment
         android:id="@+id/navigation_series"
-        android:name="com.idmdragon.movieplay.ui.main.tv.TvFragment"
+        android:name="com.idmdragon.tv.ui.TvFragment"
         android:label="@string/title_home"
         tools:layout="@layout/fragment_tv" />
 
     <fragment
         android:id="@+id/navigation_movie"
-        android:name="com.idmdragon.movieplay.ui.main.movie.MovieFragment"
+        android:name="com.idmdragon.movie.ui.MovieFragment"
         android:label="@string/title_dashboard"
         tools:layout="@layout/fragment_movie" />
 
     <fragment
         android:id="@+id/navigation_search"
-        android:name="com.idmdragon.movieplay.ui.main.search.SearchFragment"
+        android:name="com.idmdragon.search.ui.SearchFragment"
         android:label="@string/title_notifications"
         tools:layout="@layout/fragment_search" />
     <fragment
         android:id="@+id/navigation_people"
-        android:name="com.idmdragon.movieplay.ui.main.people.PeopleFragment"
+        android:name="com.idmdragon.people.ui.PeopleFragment"
         android:label="fragment_people"
         tools:layout="@layout/fragment_people" />
 </navigation>
