--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,24 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <item
-        android:id="@+id/navigation_series"
-        android:icon="@drawable/ic_series"
-        android:title="@string/title_movie" />
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/navigation_movie"
         android:icon="@drawable/ic_movie"
-        android:title="@string/title_tv" />
+        android:title="@string/title_movie"
+        app:showAsAction="always" />
+
+    <item
+        android:id="@+id/navigation_series"
+        android:icon="@drawable/ic_series"
+        android:title="@string/title_tv"
+        app:showAsAction="always" />
 
     <item
         android:id="@+id/navigation_search"
         android:icon="@drawable/ic_search"
-        android:title="@string/title_search" />
+        android:title="@string/title_search"
+        app:showAsAction="ifRoom" />
+
 
     <item
         android:id="@+id/navigation_people"
         android:icon="@drawable/ic_people"
-        android:title="@string/title_people" />
+        android:title="@string/title_people"
+        app:showAsAction="ifRoom" />
+
 
 </menu>
