--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_series">
+    app:startDestination="@id/navigation_movie">
 
     <fragment
         android:id="@+id/navigation_series"
@@ -13,7 +13,7 @@
 
     <fragment
         android:id="@+id/navigation_movie"
-        android:name="com.idmdragon.movie.ui.MovieFragment"
+        android:name="com.idmdragon.movie.ui.fragment.MovieFragment"
         android:label="@string/title_dashboard"
         tools:layout="@layout/fragment_movie" />
 
