--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="blue_200">#81D4FA</color>
-    <color name="blue_500">#03A9F4</color>
-    <color name="blue_600">#039BE5</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
+    <color name="blue">#546EE5</color>
+    <color name="blueLight">#788BE3</color>
+    <color name="black">#1B1E25</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="gray">#BABFC9</color>
+    <color name="grayDark">#696D74</color>
 </resources>
