--- a/features/movie/src/main/res/values/dimens.xml
+++ b/features/movie/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="dimen_56x">56dp</dimen>
+    <dimen name="dimen_12x">12dp</dimen>
 </resources>
