--- a/features/movie/src/main/res/values/dimens.xml
+++ b/features/movie/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="dimen_56x">56dp</dimen>
     <dimen name="dimen_12x">12dp</dimen>
+    <dimen name="dimen_x4">4dp</dimen>
 </resources>
