--- a/features/search/src/main/res/layout/fragment_search.xml
+++ b/features/search/src/main/res/layout/fragment_search.xml
@@ -4,19 +4,51 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.idmdragon.search.ui.SearchFragment">
+    android:padding="@dimen/dimen_16x" >
 
-    <TextView
-        android:id="@+id/text_notifications"
-        android:layout_width="match_parent"
+    <EditText
+        android:id="@+id/etSearch"
+        android:layout_width="@dimen/dimen_0x"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+       android:layout_margin="@dimen/dimen_16x"
+        android:autofillHints="username"
+        android:background="@drawable/bg_gray_radius_10"
+        android:drawableStart="@drawable/ic_search"
+        android:imeOptions="actionSearch"
+        android:drawablePadding="@dimen/dimen_8x"
+        android:hint="@string/text_hint_search"
+        android:inputType="text"
+        android:textColorHint="@color/white"
+        android:textColor="@color/white"
+        android:paddingHorizontal="@dimen/dimen_8x"
+        android:paddingVertical="@dimen/dimen_16x"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tvResult"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/dimen_8x"
+        android:layout_marginTop="@dimen/dimen_16x"
+        android:textColor="@color/gray"
+        android:textSize="@dimen/text_size_16x"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/etSearch"
+        tools:text="Search Result" />
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvSearch"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dimen_0x"
+        android:layout_marginTop="@dimen/dimen_32x"
+        android:visibility="visible"
+        android:layout_marginBottom="@dimen/dimen_16x"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvResult" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
