--- a/features/search/src/main/res/layout/item_search.xml
+++ b/features/search/src/main/res/layout/item_search.xml
@@ -4,10 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="@dimen/dimen_16x"
-    android:layout_marginBottom="@dimen/dimen_24x" >
+    android:layout_marginBottom="@dimen/dimen_24x">
 
     <ImageView
-        android:id="@+id/iv_poster"
+        android:id="@+id/ivPoster"
         android:layout_width="129dp"
         android:layout_height="164dp"
         android:contentDescription="@string/poster"
@@ -15,37 +15,48 @@
         app:layout_constraintTop_toTopOf="parent"  />
 
     <TextView
-        android:id="@+id/tv_tittle"
+        android:id="@+id/tvTitle"
         android:layout_width="@dimen/dimen_0x"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/dimen_16x"
         android:layout_marginTop="@dimen/dimen_8x"
         android:layout_marginEnd="@dimen/dimen_16x"
         android:ellipsize="end"
-        android:maxLines="2"
+        android:maxLines="1"
         android:textColor="@color/white"
         android:textSize="@dimen/text_size_16x"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@id/iv_poster"
-        app:layout_constraintTop_toTopOf="@id/iv_poster" />
+        app:layout_constraintStart_toEndOf="@id/ivPoster"
+        app:layout_constraintTop_toTopOf="@id/ivPoster" />
 
     <TextView
-        android:id="@+id/tv_date"
+        android:id="@+id/tvDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:textColor="@color/gray"
         android:textSize="@dimen/text_size_16x"
-        app:layout_constraintLeft_toLeftOf="@id/tv_tittle"
-        app:layout_constraintTop_toBottomOf="@id/tv_tittle"  />
+        app:layout_constraintLeft_toLeftOf="@id/tvTitle"
+        app:layout_constraintTop_toBottomOf="@id/tvTitle"  />
+
+    <TextView
+        android:id="@+id/tvMediaType"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/dimen_8x"
+        app:layout_constraintTop_toBottomOf="@id/tvDate"
+        app:layout_constraintStart_toStartOf="@id/tvDate"
+        android:background="@drawable/bg_blue_radius_10"
+        android:textColor="@color/white"
+        />
 
     <RatingBar
         android:id="@+id/rating_bar"
         style="@android:attr/ratingBarStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="@dimen/dimen_8x"
         android:isIndicator="true"
         android:numStars="5"
         android:progressBackgroundTint="@color/white"
@@ -57,7 +68,7 @@
         android:transformPivotY="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/tv_date"
-        app:layout_constraintTop_toBottomOf="@+id/tv_date" />
+        app:layout_constraintStart_toStartOf="@+id/tvMediaType"
+        app:layout_constraintTop_toBottomOf="@+id/tvMediaType" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
