feat(search): Integrate Search UI with Api

--- a/features/search/src/main/res/layout/item_search.xml
+++ b/features/search/src/main/res/layout/item_search.xml
@@ -37,6 +37,7 @@
         android:layout_marginTop="5dp"
         android:textColor="@color/gray"
         android:textSize="@dimen/text_size_16x"
+        android:visibility="gone"
         app:layout_constraintLeft_toLeftOf="@id/tvTitle"
         app:layout_constraintTop_toBottomOf="@id/tvTitle"  />
 
@@ -45,6 +46,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="@dimen/dimen_8x"
+        android:layout_marginTop="@dimen/dimen_8x"
         app:layout_constraintTop_toBottomOf="@id/tvDate"
         app:layout_constraintStart_toStartOf="@id/tvDate"
         android:background="@drawable/bg_blue_radius_10"
@@ -52,7 +54,7 @@
         />
 
     <RatingBar
-        android:id="@+id/rating_bar"
+        android:id="@+id/ratingBar"
         style="@android:attr/ratingBarStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
