--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,4 +15,5 @@
     <dimen name="dimen_248x">248dp</dimen>
     <dimen name="dimen_56x">56dp</dimen>
     <dimen name="dimen_32x">32dp</dimen>
+    <dimen name="dimen_12x">12dp</dimen>
 </resources>
