--- a/features/movie/src/main/res/layout/fragment_movie.xml
+++ b/features/movie/src/main/res/layout/fragment_movie.xml
@@ -10,16 +10,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/ivLogo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_logo"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_margin="@dimen/dimen_16x"
-            android:contentDescription="@string/cd_logo" />
-
         <TextView
             android:id="@+id/tvNowPlaying"
             android:layout_width="wrap_content"
@@ -30,7 +20,7 @@
             android:textSize="@dimen/text_size_20x"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/ivLogo" />
+            app:layout_constraintTop_toTopOf="parent"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvNowPlaying"
