--- a/features/search/src/main/res/layout/activity_search.xml
+++ b/features/search/src/main/res/layout/activity_search.xml
@@ -3,13 +3,26 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:paddingHorizontal="@dimen/dimen_8x"
     android:layout_width="match_parent"
+    android:background="@color/black"
     android:layout_height="match_parent"  >
 
+    <ImageButton
+        android:id="@+id/btnBack"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/dimen_12x"
+        android:layout_marginTop="@dimen/dimen_16x"
+        android:background="@android:color/transparent"
+        android:contentDescription="@string/cd_back"
+        android:padding="@dimen/dimen_8x"
+        android:src="@drawable/ic_back_white"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
     <EditText
         android:id="@+id/etSearch"
         android:layout_width="@dimen/dimen_0x"
         android:layout_height="wrap_content"
-       android:layout_margin="@dimen/dimen_16x"
+        android:layout_margin="@dimen/dimen_16x"
         android:autofillHints="username"
         android:background="@drawable/bg_gray_radius_10"
         android:drawableStart="@drawable/ic_search"
@@ -20,9 +33,9 @@
         android:textColorHint="@color/white"
         android:textColor="@color/white"
         android:paddingHorizontal="@dimen/dimen_8x"
-        android:paddingVertical="@dimen/dimen_16x"
+        android:paddingVertical="@dimen/dimen_8x"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@id/btnBack"
         app:layout_constraintTop_toTopOf="parent" />
 
 
