feat(project): Improve UIUX with shimmer loading for list movie and tv

--- a/app/src/main/res/layout/item_cover.xml
+++ b/app/src/main/res/layout/item_cover.xml
@@ -8,5 +8,7 @@
         android:id="@+id/ivPoster"
         android:layout_width="@dimen/dimen_128x"
         android:layout_height="@dimen/dimen_156x"
-        android:contentDescription="@string/cd_poster" />
+        android:contentDescription="@string/cd_poster"
+        android:background="@color/grayDark"
+        />
 </FrameLayout>
