--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,6 +6,7 @@
     <dimen name="dimen_24x">24dp</dimen>
     <dimen name="dimen_0x">0dp</dimen>
     <dimen name="dimen_8x">8dp</dimen>
+    <dimen name="dimen_4x">4dp</dimen>
     <dimen name="text_size_16x">16sp</dimen>
     <dimen name="text_size_18x">18sp</dimen>
     <dimen name="text_size_20x">20sp</dimen>
