--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,8 @@
             android:src="@drawable/ic_logo"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_margin="@dimen/dimen_16x"
+            android:layout_marginTop="@dimen/dimen_16x"
+            android:layout_marginStart="@dimen/dimen_16x"
             android:contentDescription="@string/cd_logo" />
 
         <ImageButton
@@ -41,7 +42,6 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/dimen_0x"
         app:defaultNavHost="true"
-        android:layout_marginTop="@dimen/dimen_8x"
         app:layout_constraintBottom_toTopOf="@id/nav_view"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
