--- a/app/src/main/res/layout/item_cover_big.xml
+++ b/app/src/main/res/layout/item_cover_big.xml
@@ -8,5 +8,6 @@
         android:id="@+id/ivPoster"
         android:layout_width="@dimen/dimen_184x"
         android:layout_height="@dimen/dimen_248x"
-        android:contentDescription="@string/cd_poster" />
+        android:contentDescription="@string/cd_poster"
+        android:background="@color/grayDark"/>
 </FrameLayout>
