feat(people): Integrate Detail People with API

--- a/features/search/src/main/res/layout/activity_search.xml
+++ b/features/search/src/main/res/layout/activity_search.xml
@@ -13,7 +13,7 @@
         android:layout_margin="@dimen/dimen_12x"
         android:layout_marginTop="@dimen/dimen_16x"
         android:background="@android:color/transparent"
-        android:contentDescription="@string/cd_back"
+        android:contentDescription="@string/cd_back_button"
         android:padding="@dimen/dimen_8x"
         android:src="@drawable/ic_back_white"
         app:layout_constraintStart_toStartOf="parent"
