--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="blue">#546EE5</color>
+    <color name="blue">#2196F3</color>
     <color name="blueLight">#788BE3</color>
     <color name="black">#1B1E25</color>
     <color name="white">#FFFFFFFF</color>
